@@ -24,9 +24,9 @@
 
 #include <sofia-sip/su_glib.h>
 
+#include "luasofia.h"
+
 #include "su_glib/luasofia_su_glib_root.h"
-#include "su/luasofia_su.h"
-#include "utils/luasofia_utils.h"
 
 static int luasofia_su_glib_prefer_gsource(lua_State *L)
 {
@@ -42,14 +42,14 @@ static const luaL_Reg luasofia_glib_lib[] = {
 
 int luaopen_sofia_glib(lua_State *L)
 {
-    luaopen_sofia_su(L);
+    luaopen_sofia(L);
 
     luasofia_su_glib_root_register_meta(L);
 
     /* sofia[glib] = table */
     lua_newtable(L);
     lua_pushvalue(L, -1);
-    lua_setfield(L, -4, "glib");
+    lua_setfield(L, -3, "glib");
     luaL_register(L, NULL, luasofia_glib_lib);
     return 1;
 }
